--- a/src/util/pom.xml
+++ b/src/util/pom.xml
@@ -38,6 +38,10 @@
 
   <dependencies>
     <!-- The goal is to keep the util package mostly dependency-free -->
+    <dependency>
+      <groupId>commons-logging</groupId>
+      <artifactId>commons-logging</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
